Add audigame logo

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <core-header-panel main>
             <core-toolbar>
                 <paper-icon-button id="menu-btn" icon="menu" core-drawer-toggle></paper-icon-button>
-                <div id="title" flex>Audigame</div>
+                <div id="title" flex><img height="20" src="images/audigame_logo.png"></div>
                 <div id="login">Hi, Mario Bros!</div>
                 <paper-icon-button icon="account-circle"></paper-icon-button>
             </core-toolbar>
