--- a/cg-renderer.html
+++ b/cg-renderer.html
@@ -78,6 +78,10 @@
                 this.renderer.removeSelection();
             },
 
+            hasSelectedEntities: function () {
+                return this.renderer.hasSelectedEntities();
+            },
+
             zoomToFit: function () {
                 this.renderer.zoomToFit();
             },
