--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <core-toolbar>
                 <paper-icon-button id="menu-btn" icon="menu" core-drawer-toggle></paper-icon-button>
                 <div id="title" flex><img height="20" src="images/audigame_logo.png"></div>
-                <div id="login">Hi, Mario Bros!</div>
+                <div id="login">Hi, @rootkernel!</div>
                 <paper-icon-button icon="account-circle"></paper-icon-button>
             </core-toolbar>
             <cg-app logo="images/dude_logo_dark.png"
