Update dark theme.

--- a/cg-app.html
+++ b/cg-app.html
@@ -103,6 +103,7 @@
                     </template>
                 </div>
                 <div data-state="picker">
+                    <div>Boolean</div>
                     <div>
                         <paper-toggle-button></paper-toggle-button>
                         <cg-dropdown>
