--- a/index.html
+++ b/index.html
@@ -45,13 +45,12 @@
         }
         /*core-toolbar {*/
             /*font-family: "Varela", sans-serif;*/
-            /*background: rgb(230, 230, 230);*/
+            /*background: rgb(96, 125, 139);*/
             /*color: #222;*/
-            /*border-bottom: 1px solid #ccc;*/
+            /*border-bottom: 1px solid #000;*/
         /*}*/
         /*core-toolbar #login {*/
-            /*color: #888;*/
-            /*font-size: .8em;*/
+            /*font-size: .7em;*/
         /*}*/
         /*[drawer] {*/
             /*font-family: "Varela Round", sans-serif;*/
@@ -73,7 +72,7 @@
 </head>
 <body fullbleed unresolved>
     <core-drawer-panel forceNarrow>
-        <core-header-panel main mode="seamed">
+        <core-header-panel main>
             <core-toolbar>
                 <paper-icon-button id="menu-btn" icon="menu" core-drawer-toggle></paper-icon-button>
                 <div id="title" flex><img height="20" src="images/audigame_logo.png"></div>
