--- a/cg-app.html
+++ b/cg-app.html
@@ -103,42 +103,10 @@
                     </template>
                 </div>
                 <div data-state="picker">
-                    <div>Boolean</div>
-                    <div>
-                        <paper-toggle-button></paper-toggle-button>
-                        <cg-dropdown>
-                            <template repeat="{{type in _pickerTypes}}">
-                                <div class="picker-dropdown" name="{{type}}">{{type}}</div>
-                            </template>
-                        </cg-dropdown>
-                        <!--<paper-dropdown-menu label="{{_pickerType}}" core-select="{{_pickerTypeChanged}}">-->
-                        <!--<paper-dropdown selected="{{_pickerType}}" class="dropdown">-->
-                        <!--<core-menu class="menu">-->
-                        <!--<template repeat="{{type in _pickerTypes}}">-->
-                        <!--<paper-item>{{type}}</paper-item>-->
-                        <!--</template>-->
-                        <!--</core-menu>-->
-                        <!--</paper-dropdown>-->
-                        <!--</paper-dropdown-menu>-->
-                        <!--<core-dropdown-menu label="{{_pickerType}}" selected="{{_pickerType}}">-->
-                        <!--<core-dropdown class="dropdown">-->
-                        <!--<core-menu>-->
-                        <!--<template repeat="{{type in _pickerTypes}}">-->
-                        <!--<core-item>{{type}}</core-item>-->
-                        <!--</template>-->
-                        <!--</core-menu>-->
-                        <!--</core-dropdown>-->
-                        <!--</core-dropdown-menu>-->
-                    </div>
-                    <!--<div>-->
-                    <!--<input is="core-input"-->
-                    <!--value="{{_pickerValue}}"-->
-                    <!--placeholder="Type your string..."-->
-                    <!--flex>-->
-                    <!--</div>-->
+                    <div class="title">Select type</div>
                     <div>
                         <template if="{{_pickerList.length === 0}}">
-                            <div>No results.</div>
+                            <div class="search-not-found">No results.</div>
                         </template>
                         <template repeat="{{picker in _pickerList}}">
                             <div class="search-result">
@@ -156,71 +124,6 @@
                          content>
             </cg-renderer>
         </dude-panel>
-        <paper-action-dialog
-                layered="false"
-                backdrop
-                id="settings"
-                transition="core-transition-top"
-                heading="Settings">
-            <section>
-                <label>
-                    <span>Theme:</span>
-                    <paper-dropdown-menu>
-                        <paper-dropdown class="dropdown">
-                            <core-menu selected="0" class="menu">
-                                <paper-item>audigame</paper-item>
-                                <paper-item>dude</paper-item>
-                                <paper-item>light</paper-item>
-                                <paper-item>dark</paper-item>
-                                <paper-item>blueprint</paper-item>
-                            </core-menu>
-                        </paper-dropdown>
-                    </paper-dropdown-menu>
-                </label>
-            </section>
-            <section>
-                <label>
-                    <span>Toolbar position:</span>
-                    <paper-dropdown-menu>
-                        <paper-dropdown class="dropdown">
-                            <core-menu selected="0" class="menu">
-                                <paper-item>top</paper-item>
-                                <paper-item>bottom</paper-item>
-                            </core-menu>
-                        </paper-dropdown>
-                    </paper-dropdown-menu>
-                </label>
-            </section>
-            <section>
-                <label>
-                    <span>Sidebar position:</span>
-                    <paper-dropdown-menu>
-                        <paper-dropdown class="dropdown">
-                            <core-menu selected="0" class="menu">
-                                <paper-item>left</paper-item>
-                                <paper-item>right</paper-item>
-                            </core-menu>
-                        </paper-dropdown>
-                    </paper-dropdown-menu>
-                </label>
-            </section>
-            <section>
-                <label>
-                    <span>Auto save:</span>
-                    <paper-toggle-button></paper-toggle-button>
-                </label>
-            </section>
-            <paper-button affirmative>Cancel</paper-button>
-            <paper-button affirmative autofocus>Save</paper-button>
-        </paper-action-dialog>
-        <!--<core-splitter class="panel-splitter" direction="right"></core-splitter>-->
-        <!--<dude-panel name="audio-editor" styleUrl="themes/{{theme}}/panel.css">-->
-        <!--<dude-toolbar root="hello">-->
-        <!--<div data-state="hello">Audio Editor</div>-->
-        <!--</dude-toolbar>-->
-        <!--<dude-sidebar>Here comes the tools.</dude-sidebar>-->
-        <!--<div content flex>Here comes some edition content</div>-->
-        <!--</dude-panel>-->
         <paper-toast class="notification" id="error"></paper-toast>
         <paper-toast class="notification" id="success"></paper-toast>
     </template>
@@ -228,15 +131,14 @@
         Polymer({
             searchLimit: 10,
             _commands: {
-                "openGraph": {label: "open another graph", icon: "open-in-new", disabled: true},
-                "saveGraph": {label: "save the graph", icon: "save", disabled: true},
                 "openGroup": {label: "add a group", icon: "av:my-library-add"},
                 "openAction": {label: "add an action", icon: "add-box"},
                 "openPicker": {label: "add a picker", icon: "add-circle"},
                 "editEntity": {label: "edit the selected object", icon: "create", disabled: true},
                 "removeSelection": {label: "remove all the selected objects", icon: "delete", disabled: true},
                 "zoomToFit": {label: "zoom to best fit all objects", icon: "image:crop-free"},
-                "openSettings": {"label": "open setting dialog", icon: "settings"}
+                "undo": {label: "undo last action", icon: "undo", disabled: true},
+                "redo": {label: "redo last action", icon: "redo", disabled: true}
             },
             _pickerTypes: ["boolean", "string", "sound"],
             _pickerList: [],
